--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
       <div class="jumbotron">
         <h1>Favorite Things</h1>
       </div>
+      <div>
+        <form id="favorite">
+          <div class="form-group">
+            <label for="color">What's your favorite color?</label>
+            <input id="color" class="form-control" type="text">
+            <label for="band">What's your favorite music group?</label>
+            <input id="band" class="form-control" type="text">
+          </div>
+          <button type="submit">Submit</button>
+        </form>
+        <p>This is where the output goes</p>
+        <div id="output">
+        </div>
+      </div>
     </div>
   </body>
 </html>
