Create newFavThings array that populates ul
Co-authored-by: Mook Dang <mookdang24@gmail.com>
Co-authored-by: Sead Downs <spdowns@protonmail.com>

--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
             <input id="color" class="form-control" type="text">
             <label for="band">What's your favorite music group?</label>
             <input id="band" class="form-control" type="text">
+            <label for="animal">What's your favorite animal?</label>
+            <input id="animal" class="form-control" type="text">
+            <label for="planet">What's your favorite planet?</label>
+            <input id="planet" class="form-control" type="text">
           </div>
           <button type="submit">Submit</button>
         </form>
         <p>This is where the output goes</p>
         <div id="output">
+          <p>Your favorite things are </p>
+          <ul id="listOutput">
+
+          </ul>
         </div>
       </div>
     </div>
